Fixed wrapping on About Page.

--- a/themes/alloc/sass/main.sass
+++ b/themes/alloc/sass/main.sass
@@ -165,11 +165,11 @@ a
   ul
     display: flex
     justify-content: center
+    flex-basis: auto
     text-align: center
-    padding-top: 2%
-    padding-bottom: 2%
     list-style-type: none
-    flex-flow: row nowrap
+    flex-flow: row wrap
+    padding: 1rem
     a
       font-family: Hack, monospace
       text-transform: lowercase
